added required to input field

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Päivän sää</h1>
   <div id="main">
-    <input type="text" id="haku" placeholder="Kaupungin nimi..."></input>
+    <input type="text" id="haku" placeholder="Kaupungin nimi..." required></input>
     <a href="#" class="hae-tiedot btn green" onclick="haeTiedot()">Hae säätiedot</a>
     <h4 id="kaupunki"></h4>
     <div id="ikoni"></div>
